Fixed wrapping issue of sort control icons
Sort ascending and descending icons had an issue where the icons wrapped around the "Sort By" text. 
This commit fixes it

--- a/css/publications.css
+++ b/css/publications.css
@@ -92,9 +92,10 @@ ol.publications > .year-headers {
   border-right: 4px solid transparent;
   border-top: 4px solid #2e2e2e;
   content: "";
+  display: inline-block;
   position: relative;
-  top: 11px;
-  right: -4px;
+  top: -3px;
+  right: -2px;
 }
 
 .sort.desc::after {
@@ -105,8 +106,9 @@ ol.publications > .year-headers {
   border-bottom: 4px solid #2e2e2e;
   content: "";
   position: relative;
-  top: -9px;
-  right: -4px;
+  display: inline-block;
+  top: -3px;
+  right: -2px;
 }
 
 .list-controls {
